# leadsifter

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: bc008fb8fdc3_initial_schema.py  fbbc87312ff4_add_active_qualifications_table.py
app/: config.py  container.py  crypto.py  database.py  main.py
app/adapters/: __init__.py  groq.py  n8n.py  openai.py  propspace.py
app/models/: broker.py  conversation.py  lead.py  webhook_log.py
app/ports/: __init__.py  crm.py  email_parser.py  workflow.py
app/routers/: broker.py  email_webhook.py  health.py  internal.py  mock_whatsapp.py  whatsapp_webhook.py
app/schemas/: __init__.py  broker.py  internal.py
app/services/: lead_injection.py  lead_scorer.py  whatsapp.py
app/templates/: sandbox.html
n8n/: leadsifter_qualification_workflow.json
