[project]
name = "leadsifter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "cryptography>=48.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "greenlet>=3.5.0",
    "groq>=1.2.0",
    "httpx>=0.28.1",
    "openai>=2.37.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.47.0",
]
